--- a/Experiment.ipynb
+++ b/Experiment.ipynb
@@ -98,20 +98,20 @@
     "    transforms.Normalize((0.5,), (0.5,))  #normalizing pixel values to [-1,1] for PyTorch\n",
     "])\n",
     "\n",
-    "# Load MNIST dataset\n",
+    "#loading the dataset\n",
     "train_dataset = torchvision.datasets.MNIST(root=\"./data\", train=True, transform=transform, download=True)\n",
     "test_dataset = torchvision.datasets.MNIST(root=\"./data\", train=False, transform=transform, download=True)\n",
     "\n",
-    "# Create DataLoader for PyTorch training\n",
+    "#creating DataLoader for PyTorch training\n",
     "batch_size = 64 # Set batch size\n",
     "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
-    "# converting MNIST dataset to NumPy format for NumPy-based network\n",
-    "X_train_np = train_dataset.data.numpy().reshape(-1, 784) / 255.0  # Flatten images, normalize to [0,1]\n",
+    "#converting MNIST dataset to NumPy format for NumPy-based network\n",
+    "X_train_np = train_dataset.data.numpy().reshape(-1, 784) / 255.0  \n",
     "Y_train_np = train_dataset.targets.numpy()\n",
     "\n",
-    "X_test_np = test_dataset.data.numpy().reshape(-1, 784) / 255.0  # Flatten images, normalize to [0,1]\n",
+    "X_test_np = test_dataset.data.numpy().reshape(-1, 784) / 255.0  \n",
     "Y_test_np = test_dataset.targets.numpy()\n",
     "\n",
     "visualize_samples(train_dataset, num_samples=10)\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -273,13 +273,13 @@
     }
    ],
    "source": [
-    "# Evaluate NumPy Model\n",
+    "#evaluate NumPy Model\n",
     "numpy_test_accuracy, numpy_predictions = evaluate_numpy_model(W1, b1, W2, b2, X_test_np, Y_test_np)\n",
     "\n",
-    "# Evaluate PyTorch Model\n",
+    "#evaluate PyTorch Model\n",
     "pytorch_test_accuracy, pytorch_predictions, pytorch_labels = evaluate_pytorch_model(pytorch_model, test_loader)\n",
     "\n",
-    "# Plot Heatmaps\n",
+    "#plot Heatmaps\n",
     "plot_heatmap(Y_test_np, numpy_predictions, model_name=\"NumPy Model\")\n",
     "plot_heatmap(pytorch_labels, pytorch_predictions, model_name=\"PyTorch Model\")\n",
     "\n"
@@ -287,8 +287,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-03T17:59:44.635415Z",
-     "start_time": "2025-03-03T17:59:43.511977Z"
+     "end_time": "2025-03-03T18:00:23.604035Z",
+     "start_time": "2025-03-03T18:00:22.621785Z"
     }
    },
    "id": "678953c370a1d902"
